--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A JSON compression technique by splitting JSON object into Key, Value and Model",
   "author": "Muhammad Harisuddin Thohir <me@harisuddin.com>",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/harisuddinthohir/kvm-js.git"
+  },
   "scripts": {
     "test": "node test.js"
   },
